[gd_scene load_steps=4 format=3 uid="uid://3jq2vjcu6vdq"]

[ext_resource type="Script" path="res://tasks/task_controller.gd" id="1_41e21"]
[ext_resource type="PackedScene" uid="uid://daux8l3mlpo1b" path="res://tasks/magic_circle.tscn" id="2_gulvl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d1hnx"]
size = Vector2(256, 16)

[node name="task_controller" type="Node2D"]
script = ExtResource("1_41e21")
magic_circle = ExtResource("2_gulvl")

[node name="task_spawn_timer" type="Timer" parent="."]
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]

[node name="task_spawn_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="task_spawn_area"]
position = Vector2(0, -2.38419e-07)
shape = SubResource("RectangleShape2D_d1hnx")

[connection signal="timeout" from="task_spawn_timer" to="." method="_on_task_spawn_timer_timeout"]
